--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,53 +1,59 @@
-- date: 25. Apr 2023
+- date: 22- Sep 2023
+  headline: "HyP-NeRF: Learning Improved NeRF Priors using a HyperNetwork accepted at NeurIPS 2023"
+
+- date: 28- Aug 2023
+  headline: "Prof. Madhava Krishna has been elected as a Fellow of the Indian National Academy of Engineering (INAE) for the  year 2023"
+
+- date: 25- Apr 2023
   headline: "ConceptFusion: Open-set Multimodal 3D Mapping accepted at RSS 2023"
 
-- date: 28. Feb 2023
+- date: 28- Feb 2023
   headline: "Canonical Fields: Self-Supervised Learning of Pose-Canonicalized Neural Fields accepted at CVPR 2023"
 
-- date: 17. Jan 2023
+- date: 17- Jan 2023
   headline: "Ground then Navigate: Language-guided Navigation in Dynamic Scenes accepted at the International Conference on Robotics and Automation (ICRA) 2023"
 
-- date: 17. Jan 2023
+- date: 17- Jan 2023
   headline: "Sequence-Agnostic MultiON accepted at the International Conference on Robotics and Automation (ICRA) 2023"
 
-- date: 17. Jan 2023
+- date: 17- Jan 2023
   headline: "SCARP accepted at the International Conference on Robotics and Automation (ICRA) 2023"
 
-- date: 17. Jan 2023
+- date: 17- Jan 2023
   headline: "GDIP accepted at the International Conference on Robotics and Automation (ICRA) 2023"
 
-- date: 1. July 2022
+- date: 1- July 2022
   headline: "2 papers accepted at the International Conference on Intelligent Robots and Systems (IROS) 2022"
 
-- date: 25. May 2022
+- date: 25- May 2022
   headline: "Team Cerebrus comes second with its janitorial assistant at the ARTPARK"
 
-- date: 25. May 2022
+- date: 25- May 2022
   headline: "Team Lumos wins third place in the Open Cloud Table Organization Challenge at ICRA 2022."
 
-- date: 31. January 2022
+- date: 31- January 2022
   headline: "2 papers accepted at the International Conference on Robotics and Automation (ICRA) 2022"
 
-- date: 30. June 2021
+- date: 30- June 2021
   headline: "7 papers accepted at the International Conference on Intelligent Robots and Systems (IROS) 2021"
 
-- date: 28. February 2021
+- date: 28- February 2021
   headline: "1 paper accepted at the International Conference on Robotics and Automation (ICRA) 2021"
 
-- date: 15. October 2020
+- date: 15- October 2020
   headline: "DeepMPCVS accepted at the Conference on Robot Learning, 2020"
 
-- date: 03. July 2020
+- date: 03- July 2020
   headline: "3 papers accepted at the International Conference on Intelligent Robots and Systems (IROS) 2020"
 
-- date: 01. April 2020
+- date: 01- April 2020
   headline: "2 papers accepted at the International Vehicles Symposium (IV) 2020"
 
-- date: 03. February 2020
+- date: 03- February 2020
   headline: "5 papers accepted at the International Conference on Robotics and Automation (ICRA) 2020, 
               of which 1 paper accepted in Robotics and Automation Letters (RA-L)"
 
-- date: 29. January 2020
+- date: 29- January 2020
   headline: "1 paper accepted in Winter Confenrence on Applications of Computer Vision (WACV), 2020"
 
 
