--- a/_data/pubs/2004.yml
+++ b/_data/pubs/2004.yml
@@ -1,3 +1,15 @@
+- authors: K Madhava Krishna and Henry Hexmoor
+  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2004_1.pdf
+    display: "Project Page"
+    url: /publications/2004/Krishna_Role-of-Autonomy
+  title: Role of Autonomy in a Distributed Sensor Network for Surveillance 
+  venue: IC-AI 2004
+- authors: K Madhava Krishna, Henry Hexmoor, Subbarao Pasupuleti and Srinivas Chellapa
+  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2004_1.pdf
+    display: "Project Page"
+    url: /publications/2004/Krishna_A-Surveillance-System
+  title: A Surveillance System based on Multiple Mobile Sensors
+  venue: FLAIRS 2004
 - authors: Madhava Krishna and Henry Hexmoor
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2004_1.pdf
     display: "Project Page"
@@ -5,4 +17,3 @@
   title: Reactive Collision Avoidance of Multiple Moving Agents by Cooperation and
     Conflict Propagation
   venue: ICRA 2004
-
