--- a/_data/pubs/2005.yml
+++ b/_data/pubs/2005.yml
@@ -1,4 +1,10 @@
 - authors: K Madhava Krishna and  Henry Hexmoor
+  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2005_7.pdf
+    display: "Project Page"
+    url: /publications/2005/Krishna_Resource-Allocation
+  title: Resource Allocation Strategies for a Multi Sensor Surveillance
+  venue: CTS 2005
+- authors: K Madhava Krishna and  Henry Hexmoor
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/1.pdf
     display: "Project Page"
     url: /publications/2005/Krishna_A-Constrained-Optimal-Multi-Sensor
