--- a/_data/pubs/2009.yml
+++ b/_data/pubs/2009.yml
@@ -1,3 +1,10 @@
+- authors: Sarat C Addepalli, Piyush Bansal, Kannan Srinathan and K Madhava Krishna.
+  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_10.pdf
+    display: "Project Page"
+    url: /publications/2009/Sarat_Secured-Multi-Robotic
+  title: Secured Multi-Robotic Active Localization without Exchange of Maps:A Case of
+Secure Cooperation Amongst Non-trusting Robots
+  venue: ARES 2009
 - authors: Abhijit Kundu, K Madhava Krishna and Jayanthi Sivaswamy.
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/abhijit_etal_iros2009.pdf
     display: "Project Page"
@@ -44,13 +51,13 @@
   title: Towards load-balanced de-congested multi-robotic agent traffic control by
     coordinated control at intersections
   venue: JISR 2009
-- authors: ', Rahul Sawhney, K Madhava Krishna and K Srinathan'
+- authors: Rahul Sawhney, K Madhava Krishna and K Srinathan'
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_2.pdf
     display: "Project Page"
     url: /publications/2009/Sawhney_On-Fast-Exploration
   title: On Fast Exploration in 2D and 3D Terrains with Multiple robots
   venue: AAMAS 2009
-- authors: ', Karthikeya Viswanath and K Madhava Krishna, to appear in'
+- authors: Karthikeya Viswanath and K Madhava Krishna, to appear in'
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_1.pdf
     display: "Project Page"
     url: 
