--- a/_data/pubs/2009.yml
+++ b/_data/pubs/2009.yml
@@ -51,13 +51,13 @@ Secure Cooperation Amongst Non-trusting Robots
   title: Towards load-balanced de-congested multi-robotic agent traffic control by
     coordinated control at intersections
   venue: JISR 2009
-- authors: Rahul Sawhney, K Madhava Krishna and K Srinathan'
+- authors: ', Rahul Sawhney, K Madhava Krishna and K Srinathan'
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_2.pdf
     display: "Project Page"
     url: /publications/2009/Sawhney_On-Fast-Exploration
   title: On Fast Exploration in 2D and 3D Terrains with Multiple robots
   venue: AAMAS 2009
-- authors: Karthikeya Viswanath and K Madhava Krishna, to appear in'
+- authors: ',Karthikeya Viswanath and K Madhava Krishna, to appear in'
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_1.pdf
     display: "Project Page"
     url: 
