2010 SIGGRAPH poster added

--- a/_data/pubs/2010.yml
+++ b/_data/pubs/2010.yml
@@ -1,3 +1,9 @@
+- authors: Sriranjan Rasakatla, K Madhava Krishna and Bipin Indurkhya.
+  link: # http://robotics.iiit.ac.in/uploads/Main/Publications/2010_1.pdf
+    display: "Project Page"
+    url: /publications/2010/Sriranjan_Mod-Leg
+  title: “Mod-Leg” A modular Legged robotic system
+  venue: SIGGRAPH 2010
 - authors: Abhijit Kundu, K Madhava Krishna and C. V.Jawahar.
   link: # http://robotics.iiit.ac.in/uploads/Main/Publications/abhijit_etal_icvgip2010.pdf
     display: "Project Page"
