2010 SIGGRAPH poster added

--- a/_data/pubs/2010.yml
+++ b/_data/pubs/2010.yml
@@ -1,5 +1,5 @@
 - authors: Sriranjan Rasakatla, K Madhava Krishna and Bipin Indurkhya.
-  link: # http://robotics.iiit.ac.in/uploads/Main/Publications/2010_1.pdf
+  link: https://dl.acm.org/doi/pdf/10.1145/1836845.1836858
     display: "Project Page"
     url: /publications/2010/Sriranjan_Mod-Leg
   title: “Mod-Leg” A modular Legged robotic system
