--- a/_data/pubs/2009.yml
+++ b/_data/pubs/2009.yml
@@ -2,8 +2,7 @@
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_10.pdf
     display: "Project Page"
     url: /publications/2009/Sarat_Secured-Multi-Robotic
-  title: Secured Multi-Robotic Active Localization without Exchange of Maps:A Case of
-Secure Cooperation Amongst Non-trusting Robots
+  title: Secured Multi-Robotic Active Localization without Exchange of Maps:A Case of Secure Cooperation Amongst Non-trusting Robots
   venue: ARES 2009
 - authors: Abhijit Kundu, K Madhava Krishna and Jayanthi Sivaswamy.
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/abhijit_etal_iros2009.pdf
