--- a/_data/pubs/2005.yml
+++ b/_data/pubs/2005.yml
@@ -1,5 +1,5 @@
 - authors: K Madhava Krishna and  Henry Hexmoor
-  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2005_7.pdf
+  link: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=1553332
     display: "Project Page"
     url: /publications/2005/Krishna_Resource-Allocation
   title: Resource Allocation Strategies for a Multi Sensor Surveillance
