--- a/_data/pubs/2004.yml
+++ b/_data/pubs/2004.yml
@@ -1,11 +1,11 @@
 - authors: K Madhava Krishna and Henry Hexmoor
-  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2004_1.pdf
+  link: https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=7835bff927428f34cb6a9142372e00c9615767cb
     display: "Project Page"
     url: /publications/2004/Krishna_Role-of-Autonomy
   title: Role of Autonomy in a Distributed Sensor Network for Surveillance 
   venue: IC-AI 2004
 - authors: K Madhava Krishna, Henry Hexmoor, Subbarao Pasupuleti and Srinivas Chellapa
-  link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2004_1.pdf
+  link: https://cdn.aaai.org/FLAIRS/2004/Flairs04-026.pdf
     display: "Project Page"
     url: /publications/2004/Krishna_A-Surveillance-System
   title: A Surveillance System based on Multiple Mobile Sensors
