--- a/_data/pubs/2010.yml
+++ b/_data/pubs/2010.yml
@@ -1,35 +1,35 @@
 - authors: Mahesh Mohan and K Madhava Krishna.
-  link: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5707412
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5707412
     display: "Project Page"
     url: /publications/2010/Mahesh_Mapping-Large-Scale-Environments
   title: Mapping Large Scale Environments By Combining Particle Filter and Information Filter
   venue: ICARCV 2010
 - authors: Sujith Kumar, Tejas P Parekh and K Madhava Krishna.
-  link: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723345
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723345
     display: "Project Page"
     url: /publications/2010/Sujith_A-hierarchical
   title: A Hierarchical Multi Robotic Collision Avoidance Scheme through Robot Formations 
   venue: ROBIO 2010
 - authors: Sriranjan Rasakatla, K Madhava Krishna and Bipin Indurkhya.
-  link: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723524
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723524
     display: "Project Page"
     url: /publications/2010/Sriranjan_Design-Construction
   title: Design, Construction and a compliant gait of “ModPod”:a Modular Hexpod robot. 
   venue: ROBIO 2010
 - authors: Sriranjan Rasakatla and K Madhava Krishna.
-  link: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723552
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723552
     display: "Project Page"
     url: /publications/2010/Sriranjan_Snake-P3
   title: Snake P3 :A semi-autonomous Snake robot
   venue: ROBIO 2010
 - authors: Abhijit Kundu, C. V Jawahar and K Madhava Krishna.
-  link: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723575
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5723575
     display: "Project Page"
     url: /publications/2010/Abhijit_Realtime-Moving-Object-Detection
   title: Realtime Moving Object Detection from a Freely Moving Monocular Camera
   venue: ROBIO 2010
 - authors: Sriranjan Rasakatla, K Madhava Krishna and Bipin Indurkhya.
-  link: https://dl.acm.org/doi/pdf/10.1145/1836845.1836858
+  link: #https://dl.acm.org/doi/pdf/10.1145/1836845.1836858
     display: "Project Page"
     url: /publications/2010/Sriranjan_Mod-Leg
   title: “Mod-Leg” A modular Legged robotic system
