--- a/_data/pubs/2009.yml
+++ b/_data/pubs/2009.yml
@@ -1,5 +1,5 @@
 - authors: Sarat C Addepalli, Piyush Bansal, Kannan Srinathan and K Madhava Krishna.
-  link: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5066533
+  link: #https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5066533
     display: "Project Page"
     url: /publications/2009/Sarat_Secured-Multi-Robotic
   title: Secured Multi-Robotic Active Localization without Exchange of Maps:A Case of Secure Cooperation Amongst Non-trusting Robots
