--- a/_data/pubs/2020.yml
+++ b/_data/pubs/2020.yml
@@ -1,3 +1,11 @@
+- title: "AutoLay: Benchmarking amodal layout estimation for autonomous driving"
+  authors: Kaustubh Mani, N. Sai Shankar, Krishna Murthy Jatavallabhula and K. Madhava Krishna
+  
+  venue:   IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2020
+  link: #
+    url: /publications/2020/Kaustubh_AutoLay
+    display: Project Page
+
 - title: "Towards adaptive autopilots for fixed-wing unmanned aerial vehicles"
   authors: Simone Baldi, Spandan Roy and Kang Yang
   
