2023 code and video links added

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -4,6 +4,9 @@
 - date: 28- Aug 2023
   headline: "Prof. Madhava Krishna has been elected as a Fellow of the Indian National Academy of Engineering (INAE) for the  year 2023"
 
+- date: 17- Jul 2023
+  headline: "Master Training Program for UAS Allied Technologies conducted in the month of July 2023."
+
 - date: 25- Apr 2023
   headline: "ConceptFusion: Open-set Multimodal 3D Mapping accepted at RSS 2023"
 
