--- a/_data/pubs/2008.yml
+++ b/_data/pubs/2008.yml
@@ -4,48 +4,48 @@
     url: /publications/2008/Sawhney_On-Reduced-Time
   title: On Reduced time fault tolerant paths for Multi-UAVs covering a Hostile Terrain
   venue: AAMAS 2008
-- authors: Shivudu B and K M Krishna,
+- authors: Shivudu B and K M Krishna
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2008_4.pdf
     display: "Project Page"
     url: /publications/2008/Bhuvanagiri_Coordination-in-Ambiguity
   title: 'Coordination in Ambiguity: Actively Localizing Multiple Robots'
   venue: AAMAS 2008
-- authors: ', A H Abdul Hafez, S Bhuvanagiri, K Madhava Krishna and C V Jawahar,'
+- authors: A H Abdul Hafez, S Bhuvanagiri, K Madhava Krishna and C V Jawahar
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2008_2.pdf
     display: "Project Page"
     url: /publications/2008/Hafez_On-line-Convex
   title: On-line Convex Optimization based Solution for Mapping in VSLAM
   venue: IROS 2008
-- authors: ', Mahesh Mohan, Rahul Sawhney, K Madhava Krishna, K Srinathan and M B
-    Srikkanth,'
+- authors: Mahesh Mohan, Rahul Sawhney, K Madhava Krishna, K Srinathan and M B
+    Srikkanth
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2008_3.pdf
     display: "Project Page"
     url: /publications/2008/Mohan_Covering-Hostile-Terrains
   title: 'Covering Hostile Terrains with Partial and Complete Visibilities: On Minimum Distance
     Paths'
   venue: IROS 2008
-- authors: ', S Bhuvanagiri and K Madhava Krishna,'
+- authors: S Bhuvanagiri and K Madhava Krishna
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2008_5.pdf
     display: "Project Page"
     url: /publications/2008/Bhuvanagiri_Active-Global-Localization
   title: Active Global Localization for Multiple Robots by Disambiguating Multiple
     Hypotheses
   venue: IROS 2008
-- authors: ', Ankur Handa, J Sivaswamy, K Madhava Krishna and Sartaj Singh, accepted
+- authors: Ankur Handa, J Sivaswamy, K Madhava Krishna and Sartaj Singh, accepted
     at'
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2008_6.pdf
     display: "Project Page"
     url: /publications/2008/Handa_Person
   title: Person following by a mobile robot
   venue: CLAWAR 2008
-- authors: ', Hemanth Korapatti, S Subhash, K Madhava Krishna and A K Pandey,'
+- authors: Hemanth Korapatti, S Subhash, K Madhava Krishna and A K Pandey
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2008_9.pdf
     display: "Project Page"
     url: /publications/2008/K_Localizing-from-Multi-Hypotheses
   title: Localizing from multiple hypotheses states minimizing expected path lengths
     for mobile robots
   venue: CLAWAR 2008
-- authors: ', Vijay P Eathakota, S Kolachalama and K Madhava Krishna,'
+- authors: Vijay P Eathakota, S Kolachalama and K Madhava Krishna
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2008_10.pdf
     display: "Project Page"
     url: /publications/2008/Eathakota_Optimal-Posture-Control
