--- a/_data/pubs/2009.yml
+++ b/_data/pubs/2009.yml
@@ -50,7 +50,7 @@
   title: Towards load-balanced de-congested multi-robotic agent traffic control by
     coordinated control at intersections
   venue: JISR 2009
-- authors: ', Rahul Sawhney, K Madhava Krishna and K Srinathan'
+- authors: Rahul Sawhney, K Madhava Krishna and K Srinathan
   link: #http://robotics.iiit.ac.in/uploads/Main/Publications/2009_2.pdf
     display: "Project Page"
     url: /publications/2009/Sawhney_On-Fast-Exploration
