2023 project pages added

--- a/_data/pubs/2022.yml
+++ b/_data/pubs/2022.yml
@@ -28,7 +28,7 @@
 - title: "Adaptive single-stage control for uncertain nonholonomic Euler-Lagrange systems"
   authors: Tian Tao, Spandan Roy and Simone Baldi
   venue:  Conference on Decision and Control (CDC), 2022
-  link: # https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9993015
+  link: # https://ieeexplore.ieee.org/document/9993015
     url: /publications/2022/Tian_Adaptive-single-stage
     display: Project Page
   id: spandan.roy
